Added support for custom text in batch messages
